--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🔥 Meu Primeiro Site 🔥</title>
+    <title>☀️ PRAISE THE SUN ☀️</title>
 </head>
 
 <body>
-    Olá mundo!
-    Esse site é mais feio que eu kkkkkkkkkkkkkkkkk
+    <img src="PraiseTheSun.jpg">
+    <strong>☀️ PRAISE THE SUN ☀️</strong>
 </body>
 
 </html>
