--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 </head>
 
 <body>
-    <img src="PraiseTheSun.jpg">
-    <strong>☀️ PRAISE THE SUN ☀️</strong>
+    <h1> ☀️ <strong>PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN</strong> ☀️ </h1>
+    <p> <img src="\imagens\PraiseTheSun.jpg" alt="PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN"> </p>
+
+    <hr>
+
+    <p> <img src="imagens/TinyBrain.jpg" alt="if you don't praise the sun you have tiny brain">
+    <strong>People who don't praise the sun</strong>
+
+    <img src="imagens/BigBrain.jpg" alt="when you praise the sun, your brain expands">
+    <strong>People who praise the sun</strong> </p>
 </body>
 
 </html>
