--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1> ☀️ <strong>PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN</strong> ☀️ </h1>
+    <p> <strong> <a href="https://darksouls.wiki.fextralife.com/Warrior+of+Sunlight">PRAISE THE SUN</a> </strong> </p>
     <p> <img src="\imagens\PraiseTheSun.jpg" alt="PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN"> </p>
 
     <hr>
@@ -19,6 +20,8 @@
 
     <img src="imagens/BigBrain.jpg" alt="when you praise the sun, your brain expands">
     <strong>People who praise the sun</strong> </p>
+
+    <hr>
 </body>
 
 </html>
