Corrige erro em index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1> ☀️ <strong>PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN</strong> ☀️ </h1>
     <p> <strong> <a href="https://darksouls.wiki.fextralife.com/Warrior+of+Sunlight">PRAISE THE SUN</a> </strong> </p>
-    <p> <img src="\imagens\PraiseTheSun.jpg" alt="PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN"> </p>
+    <p> <img src="imagens/PraiseTheSun.jpg" alt="PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN PRAISE THE SUN"> </p>
 
     <hr>
 
