Adiciona mais imagens ao site

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
     <strong>People who praise the sun</strong> </p>
 
     <hr>
+
+    <img src="imagens/PokemonPraise.gif" alt="Even pokemon trainers praise the sun">
+    <img src="imagens/SunPraisingTime.jpg" alt="It's always sun praising time">
+    <img src="imagens/PraiseTheFUCKINGSun.jpg" alt="Praise the fucking sun">
+    <img src="imagens/PraiseTheSunPoster.jpg" alt="Propaganda">
+    <img src="imagens/SolaireFlip.jpg" alt="Solaire will flip you off if you dont praise the sun">
+
+    <hr>
 </body>
 
 </html>
